--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="access_limit_text">You\'ve given access to a select number of photos and videos</string>
     <string name="manage">Manage</string>
 
+    <string name="channel_name">message channel</string>
+    <string name="channel_description">show message no notification\n</string>
+
 </resources>
